--- a/index.html
+++ b/index.html
@@ -211,12 +211,15 @@
       <!-- 学校DX化でわくわくをサポート -->
       <a href="https://www.treasure-max.fun/" target="_blank"
         class="content-card-link block bg-gradient-to-r from-indigo-500 to-sky-600 text-white font-bold py-6 px-8 rounded-2xl shadow-xl relative overflow-hidden"
-        data-categories="DX化,ポータルサイト,特別支援教育">
+        data-categories="DX化,ポータルサイト,特別支援教育,生成AI,AIチャットボット,熊本大学">
         <span class="category-tag bg-indigo-700">DX化</span>
         <span class="category-tag bg-fuchsia-700" style="left: 0.75rem; top: 2.75rem;">特別支援教育</span>
+        <span class="category-tag bg-green-700" style="left: 0.75rem; top: 4.75rem;">生成AI</span>
+        <span class="category-tag bg-sky-700" style="left: 0.75rem; top: 6.75rem;">AIチャットボット</span>
+        <span class="category-tag bg-rose-700" style="left: 0.75rem; top: 8.75rem;">熊本大学</span>
         <div class="text-2xl mb-2">💻</div>
         <div class="text-lg">学校DX化でわくわくをサポート</div>
-        <div class="text-sm opacity-80">教育のDX化を推進</div>
+        <div class="text-sm opacity-80">先生のための授業・教材研究を支援する情報プラットフォーム</div>
       </a>
 
       <!-- ICTインフォグラフィック -->
@@ -274,8 +277,10 @@
       <!-- AI教育コンテンツハブ -->
       <a href="https://medu-web.github.io/AI-Educational-Content-Hub/" target="_blank"
         class="content-card-link block bg-gradient-to-r from-red-500 to-red-600 text-white font-bold py-6 px-8 rounded-2xl shadow-xl relative overflow-hidden"
-        data-categories="AI教育">
+        data-categories="AI教育,生成AI,都立AI">
         <span class="category-tag bg-red-700">AI教育</span>
+        <span class="category-tag bg-red-800" style="left: 0.75rem; top: 2.75rem;">生成AI</span>
+        <span class="category-tag bg-pink-700" style="left: 0.75rem; top: 4.75rem;">都立AI</span>
         <div class="text-2xl mb-2">🧠</div>
         <div class="text-lg">AI教育コンテンツハブ</div>
         <div class="text-sm opacity-80">人工知能との学び</div>
