--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ICTコンテンツハブ</title>
+  <title>ICTコンテンツポータル</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -189,7 +189,7 @@
   <!-- メインコンテンツのコンテナ -->
   <div class="glass-effect p-8 rounded-3xl w-full max-w-4xl text-center">
     <!-- タイトル -->
-    <h1 class="text-5xl font-extrabold text-gray-800 mb-4 drop-shadow-lg">✨ ICTコンテンツハブ</h1>
+    <h1 class="text-5xl font-extrabold text-gray-800 mb-4 drop-shadow-lg">✨ ICTコンテンツポータル</h1>
     <p class="text-xl text-gray-700 mb-6 drop-shadow">革新的な教育体験をお届けします - クリックして探索してください</p>
 
     <!-- カテゴリフィルターボタンのコンテナ -->
@@ -333,7 +333,7 @@
     </div>
 
     <div class="mt-12 text-center">
-      <p class="text-gray-600 text-sm">© 2025 ICTコンテンツハブ. All rights reserved.</p>
+      <p class="text-gray-600 text-sm">© 2025 ICTコンテンツポータル. All rights reserved.</p>
     </div>
   </div>
 
