--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <div class="glass-effect p-8 rounded-3xl w-full max-w-4xl text-center">
     <!-- タイトル -->
     <h1 class="text-5xl font-extrabold text-gray-800 mb-4">✨ ICTコンテンツポータル</h1>
-    <p class="text-xl text-gray-700 mb-6">革新的な教育体験をお届けします - クリックして探索してください</p>
+    <p class="text-xl text-gray-700 mb-6">ここからはじまる - クリックして探索してください</p>
 
     <!-- カテゴリフィルターボタンのコンテナ -->
     <div id="filter-buttons" class="flex flex-wrap justify-center gap-2 mb-8">
